@@ -3,13 +3,31 @@
 # Deploy It!
 # ==============================================================================
 
-C_DIR=$(dirname $(readlink -f $0))
-GENERATE_SH=$C_DIR/generate.sh
+function doDeploy
+{
+  local C_DIR=$(dirname $(readlink -f $0))
+  local GENERATE_SH=${C_DIR}/generate.sh
+  local CLONE_SH=${C_DIR}/clone.sh
 
-if [[ -r $GENERATE_SH ]]
+  if [[ -r $GENERATE_SH ]]
+  then
+    source $GENERATE_SH
+  fi
+
+  if [[ -r $CLONE_SH ]]
+  then
+    source $CLONE_SH
+  fi
+
+  env hexo deploy
+
+  return $?
+}
+
+doDeploy
+
+if [[ 0 -ne $? ]]
 then
-  source $GENERATE_SH
+  exit $?
 fi
-
-env hexo deploy
 
